tests/baselines/reference/contextuallyTypingOrOperator.errors.txt
contextuallyTypingOrOperator.ts(1,39): error TS2872: This kind of expression is always truthy.


==== contextuallyTypingOrOperator.ts (1 errors) ====
    var v: { a: (_: string) => number } = { a: s => s.length } || { a: s => 1 };
                                          ~~~~~~~~~~~~~~~~~~~~
!!! error TS2872: This kind of expression is always truthy.
    
    var v2 = (s: string) => s.length || function (s) { s.length };
    
    var v3 = (s: string) => s.length || function (s: number) { return 1 };
    var v4 = (s: number) => 1 || function (s: string) { return s.length };